--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <title>Hello</title>
 <head>
 <body>
-<script>
+  <script>
   (function() {
     var cx = '010411417471778709834:tzmksnvh5v4';
     var gcse = document.createElement('script');
     gcse.type = 'text/javascript';
     gcse.async = true;
-    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx + '&q=news';
+    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
     var s = document.getElementsByTagName('script')[0];
     s.parentNode.insertBefore(gcse, s);
   })();
 </script>
-<gcse:searchresults-only></gcse:searchresults-only>
+<gcse:search></gcse:search>
 </body>
 </html>
