--- a/index.html
+++ b/index.html
@@ -1,19 +1,59 @@
-<html>
+<!doctype html>
+<html lang="en" class="no-js">
 <head>
-<title>Hello</title>
-<head>
-<body>
-  <script>
-  (function() {
-    var cx = '010411417471778709834:tzmksnvh5v4';
-    var gcse = document.createElement('script');
-    gcse.type = 'text/javascript';
-    gcse.async = true;
-    gcse.src = 'https://cse.google.com/cse.js?cx=' + cx;
-    var s = document.getElementsByTagName('script')[0];
-    s.parentNode.insertBefore(gcse, s);
-  })();
-</script>
-<gcse:search></gcse:search>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
+
+	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
+	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
+	<script src="js/modernizr.js"></script> <!-- Modernizr -->
+  	
+	<title>Page Scroll Effects | CodyHouse</title>
+</head>
+<!-- hijacking: on/off - animation: none/scaleDown/rotate/gallery/catch/opacity/fixed/parallax -->
+
+<body data-hijacking="off" data-animation="fixed">
+	<section class="cd-section visible">
+		<div>
+			<h2>Page Scroll Effects</h2>
+		</div>
+	</section>
+
+	<section class="cd-section">
+		<div>
+			<h2>Section 2</h2>
+		</div>
+	</section>
+
+	<section class="cd-section">
+		<div>
+			<h2>Section 3</h2>
+		</div>
+	</section>
+
+	<section class="cd-section">
+		<div>
+			<h2>Section 4</h2>
+		</div>
+	</section>
+
+	<section class="cd-section">
+		<div>
+			<h2>Section 5</h2>
+		</div>
+	</section>
+
+	<nav>
+		<ul class="cd-vertical-nav">
+			<li><a href="#0" class="cd-prev inactive">Next</a></li>
+			<li><a href="#0" class="cd-next">Prev</a></li>
+		</ul>
+	</nav> <!-- .cd-vertical-nav -->
+<script src="js/jquery-2.1.4.js"></script>
+<script src="js/velocity.min.js"></script>
+<script src="js/velocity.ui.min.js"></script>
+<script src="js/main.js"></script> <!-- Resource jQuery -->
 </body>
 </html>
