--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
 <body data-hijacking="off" data-animation="fixed">
 	<section class="cd-section visible">
 		<div>
-			<h2></h2>
+			<h2>Lion</h2>
 		</div>
 	</section>
 
 	<section class="cd-section">
 		<div>
-			<h2></h2>
+			<h2>More lion </h2>
 		</div>
 	</section>
 
 	<section class="cd-section">
 		<div>
-			<h2></h2>
+			<h2>Never get sick of</h2>
 		</div>
 	</section>
 
 	<section class="cd-section">
 		<div>
-			<h2></h2>
+			<h2>Lion</h2>
 		</div>
 	</section>
 
