--- a/time-widget.html
+++ b/time-widget.html
@@ -1,18 +1,19 @@
-UTC time: <span id="UTC_za00"></span><br/>
-New York sunrise time: <span id="New_York_z161"></span><br/>
-Tokyo sunrise time: <span id="Tokyo_z444"></span><br/>
-Find the <a href="https://time.is/" id="time_is_link" rel="nofollow">current time for any location or time zone on Time.is!</a>
+time: <span id="UTC_za00"></span> rise: <span id="New_York_z161"></span> set: <span id="Tokyo_z444"></span>
 <script src="//widget.time.is/en.js"></script>
 <script>
 time_is_widget.init({
-	UTC_za00 : {},
+	UTC_za00 : {
+		coords: "40.71427,-74.00597"
+		   },
 	New_York_z161 : {
 		template: "SUN",
 		sun_format: "srhour:srminute",
 		coords: "40.71427,-74.00597"
 		},
 	Tokyo_z444 : {
-		coords: "59.33258,18.06490"
+		template: "SUN",
+		sun_format: "sshour:ssminute",
+		coords: "40.71427,-74.00597"
 		}
 	});
 </script>
